# PeerCastIM-Mod

./: .gitignore  CMakeLists.txt  PeerCast.sln  README.md
PeerCast.root/PeerCast/core/common/: channel.cpp  channel.h  cstream.h  gnutella.cpp  html.cpp  http.cpp  http.h  ogg.cpp  pcp.cpp  pcp.h  peercast.cpp  servent.cpp  servhs.cpp  servmgr.cpp  servmgr.h  socket.h  sys.h  url.cpp  version2.h  xml.cpp
PeerCast.root/PeerCast/core/win32/: seh.h  wsocket.cpp  wsocket.h  wsys.cpp
PeerCast.root/PeerCast/core/win32/lib/: corelib.vcproj
PeerCast.root/PeerCast/ui/win32/: PeerCast.sln  memo.txt
PeerCast.root/PeerCast/ui/win32/Simple_vp/: Simple.cpp  Simple_vp.vcproj  gui_vp.cpp
PeerCast.root/PeerCast/ui/win32/simple/: Simple.cpp  Simple.rc  Simple.vcproj  gui.cpp  gui.h  resource.h
PeerCast.root/PeerCast_1/core/common/: gnutella.cpp  html.cpp  ogg.h  pcp.cpp  rtsp.cpp  servmgr.h  socket.cpp  stats.cpp  utf8.c
PeerCast.root/PeerCast_1/ui/win32/: PeerCast.sln
PeerCast.root/PeerCast_1/ui/win32/simple/: Simple.vcproj  gui.h
c:/Git/PeerCast.root/PeerCast/core/common/: channel.cpp  channel.h  cstream.h  html.h  http.h  icy.cpp  mms.cpp  pcp.cpp  rtsp.cpp  servent.cpp  servent.h  servhs.cpp  servmgr.cpp  servmgr.h  socket.h  stream.cpp  stream.h  sys.h  url.cpp  version2.h
c:/Git/PeerCast.root/PeerCast/core/win32/: seh.cpp  wsocket.cpp  wsys.cpp  wsys.h
c:/Git/PeerCast.root/PeerCast/core/win32/lib/: corelib.vcproj
c:/Git/PeerCast.root/PeerCast/ui/win32/: PeerCast.sln
c:/Git/PeerCast.root/PeerCast/ui/win32/Simple_vp/: Simple_vp.vcproj  chkMemoryLeak.cpp  gui_vp.cpp
c:/Git/PeerCast.root/PeerCast/ui/win32/simple/: Simple.cpp  Simple.rc  Simple.vcproj  chkMemoryLeak.h  gui.cpp  gui.h  resource.h
c:/Git/PeerCast.root/PeerCast_1/core/common/: channel.h  jis.cpp  pcp.h  servhs.cpp  servmgr.cpp  stream.h  sys.cpp
c:/Git/PeerCast.root/PeerCast_1/core/win32/: wsocket.h  wsys.h
c:/Git/PeerCast.root/PeerCast_1/ui/win32/: PeerCast.vsscc
core/common/: addrCont.h  asf.h  atom.h  channel.cpp  channel.h  common.h  cstream.h  gnutella.cpp  gnutella.h  html-xml.h  html.cpp  html.h  http.cpp  http.h  icy.cpp  icy.h  id.h  identify_encoding.c  identify_encoding.h  inifile.cpp  inifile.h  jis.cpp  jis.h  mms.cpp  mms.h  mp3.cpp  mp3.h  nsv.cpp  nsv.h  ogg.cpp  ogg.h  pcp.cpp  pcp.h  peercast.cpp  peercast.h  rtsp.cpp  rtsp.h  servent.cpp  servent.h  servhs.cpp  (+18 more)
core/unix/: compat.cpp  compat.h  ts_vector.h  usocket.cpp  usocket.h  usys.cpp  usys.h
core/win32/: seh.cpp  seh.h  ts_vector.h  wsocket.cpp  wsocket.h  wsys.cpp  wsys.h
core/win32/lib/: corelib.vcproj  corelib.vcproj.vspscc
ui/html/de/: broadcast.html  chaninfo.html  connections.html  index.html  login.html  logout.html  relayinfo.html  relays.html  settings.html  viewlog.html
ui/html/en/: broadcast.html  chaninfo.html  connections.html  index.html  login.html  logout.html  relayinfo.html  relays.html  settings.html  viewlog.html
ui/html/fr/: bcid.html  broadcast.html  connections.html  index.html  login.html  logout.html  peercast.css  relayinfo.html  relays.html  settings.html  viewlog.html
ui/html/ja/: bcid.html  broadcast.html  chaninfo.html  connections.html  hosts.html  index.html  login.html  logout.html  peercast.css  relayinfo.html  relays.html  settings.html  settings.html.1218  simpleinfo.html  tree.html  tree.js.html  trees.html  viewlog.html
ui/linux/: main.cpp  makefile
ui/osx/: carbonwraps.h  ctimer.cpp  ctimer.h  databrowser.cpp  databrowser.h  main.cpp  makefile  numericcontrol.cpp  numericcontrol.h  osxapp.cpp  osxapp.h  tabcontrol.cpp  tabcontrol.h  textcontrol.cpp  textcontrol.h  xcode_main.cpp  xcode_main.h
ui/qt4/: .gitignore  gui.cpp  gui.h  listitem.cpp  listitem.h  main.cpp  main.h  mainform.ui  peercast.pro
ui/qt5/: .gitignore  PeerCast.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
ui/win32/: PeerCast.sln  PeerCast.vssscc
ui/win32/Simple_vp/: Simple.h  Simple.rc  Simple_vp.vcproj  Simple_vp.vcproj.vspscc  Simple_vp.vcxproj  Simple_vp.vcxproj.filters  chkMemoryLeak.h  resource.h
ui/win32/simple/: Simple.cpp  Simple.rc  Simple.vcproj  Simple.vcproj.vspscc  Simple.vcxproj  Simple.vcxproj.filters  chkMemoryLeak.cpp  gui.cpp  gui.h  resource.h
(+2 files in other folders)
